--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Alpha4 
  	- Fixed a flaw in album art search which only returned a single
		result, now shows all results and allows you to pick
		the correct one. 
  	- Added ability to re-define album art search (Thx csammis)
		https://ampache.bountysource.com/Task.View?task_id=86
  	- Fixed a logic flaw where it would attempt to parse the m3u
		before all songs were cataloged 
		https://ampache.bountysource.com/Task.View?task_id=122
  	- Fixed a problem where updating your normal preferences when
		use_auth was off would clear admin prefs
	- Found a few more <? and replaced them with <?php

--------------------------------------------------------------------------
  v.3.3.2-Alpha3 11/29/2005
  	- Added marineam's patch to the Snoopy class which fixes a flaw
		in the new version which fails to escape single quotes
  	- Updated included Snoopy class due to vulenerability
		http://seclists.org/lists/fulldisclosure/2005/Oct/0536.html
		(Thx marineam)
	- Fixed a problem where it would attempt to redirect back to the
		admin section regardless of rights giving a access denied
		message. 
  	- Added transcoding of m4a files so they stream properly 
		(Thx Rosensama)
	- Fixed problem where Add to Playlist from mpd.php only works for 
		file method (Thx Rosensama)
	- Added 'Simple' Genre Bar (Thx sigger)
	- Added initial TV page for viewing of nowplaying and additional 
		information (Thx sigger)
	- Updated Archive library to 2.1 Released 08/13/2005
	- Corrected math error with automagic downsampling (Thx J)
	- Corrected some of the no_auth preference problems
	- Fixed a problem where Clearing the catalog stats, didn't actually
		do anything