@@ -2003,6 +2003,61 @@ class Catalog {
 
 	} // import_m3u
 
+        /*!
+                @function merge_stats
+                @discussion merge stats entries
+                @param $type the object_type row in object_count to use
+                @param $oldid the old object_id
+                @param $newid the new object_id to merge to
+                @return the number of stats changed
+                @todo move this to the right file
+        */
+        function merge_stats ($type,$oldid,$newid) {
+
+                //check data
+                $accepted_types = array ("artist");
+                if (!in_array($type,$accepted_types)) { return false; } 
+
+                //now retrieve all of type and oldid
+                $stats_qstring = "SELECT id,count,userid," . 
+			"(SELECT id FROM object_count WHERE object_type = '$type' AND object_id = '$newid' AND userid=o.userid) AS existingid " .
+			"FROM object_count AS o WHERE object_type = '$type' AND object_id = '$oldid'";
+
+                $stats_query = mysql_query($stats_qstring,dbh());
+                $oldstats = array();
+                //now collect needed data into a array
+                while ($stats_result = mysql_fetch_array($stats_query,MYSQL_ASSOC)) {
+                        $userid = $stats_result['userid'];
+                        $oldstats[$userid]['id'] = $stats_result['id'];
+                        $oldstats[$userid]['count'] = $stats_result['count'];
+                        $oldstats[$userid]['existingid'] = $stats_result['existingid'];
+                }
+                //now foreach that array, changeing/updateing object_count and if needed deleting old row
+                $num_changed = 0;
+                foreach ($oldstats as $userid => $stats) {
+                        //first check if it is a update or insert
+                        if (is_numeric($stats['existingid'])) {
+			
+                                $stats_count_change_qstring = "UPDATE object_count SET count = count + '" . $stats['count'] . "' WHERE id = '" . $stats['existingid'] . "'";
+                                mysql_query($stats_count_change_qstring,dbh());
+				
+                                //then, delete old row
+                                $old_stats_delete_qstring = "DELETE FROM object_count WHERE id ='" . $stats['id'] . "'";
+                                mysql_query($old_stats_delete_qstring,dbh());
+				
+                                $num_changed++;
+                        } else {
+                                //hasn't yet listened, just change object_id
+                                $stats_artist_change_qstring = "UPDATE object_count SET object_id = '$newid' WHERE id ='" . $stats['id'] . "'";
+                                mysql_query($stats_artist_change_qstring,dbh());
+                                //done!
+                                $num_changed++;
+                        }
+                }
+                return $num_changed;
+
+        } // merge_stats
+
 	/*!
 		@function delete_catalog
 		@discussion Deletes the catalog and everything assoicated with it
