@@ -26,34 +26,28 @@
 	}
 </script>
 
-<form name="rename_artist" method="post" action="<?php echo conf('web_path'); ?>/artists.php?action=rename&amp;artist=<?php echo $artist->id; ?>">
-<table class="text-box">
-<tr class="table-header">
-	<th colspan="3">
-	<?php echo _("Renaming") . " " . $artist->name; ?>
+<form name="rename_artist" method="post" action="<?php echo conf('web_path'); ?>/artists.php?action=rename&amp;artist=<?php echo $artist->id; ?>" style="Display:inline;">
+<table class="text-box" cellspacing="0">
+<tr>
+	<th align="left">
+	<span class="header2"><?php echo _("Rename") . " " . $artist->name . " " . _("to"); ?></span>
 	</th>
 </tr>
-<tr class="odd">
-	<td>
-		<?php echo _("New name"); ?>
-	</td>
+<tr>
 	<td>
         	<?php show_artist_pulldown($artist->id,"artist_id",4); ?>
 		<br />
 		<?php echo _("OR"); ?><br />
-		<input type="text" name="artist_name" size="30" value=<?php echo scrub_out($_REQUEST['artist_name']); ?>" id="artist_name" />
-		<a href="javascript:insert()"><?php echo _("Insert current"); ?></a>
+		<input type="text" name="artist_name" size="30" value="<?php echo scrub_out($_REQUEST['artist_name']); ?>" id="artist_name" />
+		<a href="javascript:insert()">[<?php echo _("Insert current"); ?>]</a>
 		<?php $GLOBALS['error']->print_error('artist_name'); ?>
 	</td>
 </tr>
-<tr class="even">
-	<td>&nbsp;</td>
+<tr>
 	<td><input type="checkbox" name="update_id3" value="1" />&nbsp; <?php echo _("Update id3 tags"); ?></td>
-	<td>&nbsp;</td>
 </tr>
-<tr class="odd">
-	<td>&nbsp;</td>
-	<td colspan="2">
+<tr>
+	<td>
 		<input type="submit" value="<?php echo _("Rename"); ?>" />
 	</td>
 </tr>
